feat: servir archivos privados con URL firmada y validar acceso